@@ -1,3 +1,13 @@
+1998-09-11  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* mel-b.el (base64-internal-encoded-length): Refined.
+
+	* mel-ccl.el (q-encoding-ccl-encoded-length): Remove bogus
+	DOC-string.
+
+	* mel.el (q-encoding-ccl-encoded-length): Remove bogus
+	DOC-string.
+
 1998-09-10  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* mel-ccl.el (mel-ccl-encode-q-generic): New compile-time
